2004-09-03  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munge/remunge.c: Removed error count from number processed.

	* src/munged/munged.c(main):
	  Changed default log priority level from LOG_NOTICE to LOG_INFO.

	* src/munged/conf.c(display_help): Added newline.

	* src/munge/munge.c(display_strings,str_to_int): Tweaked formatting.

	* src/munge/Makefile.am, src/munge/remunge.c: Added.

2004-08-26  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/munge_defs.h, src/munged/job.c(job_accept):
	  Fix bug causing the daemon to crash if accept() exceeded the
	  open file descriptor limit for the process.

	* src/libmunge/ctx.c, src/libmunge/munge.h:
	  Added munge_ctx_copy().  Added docs wrt context function usage.

2004-08-25  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/munge_defs.h:
	  Changed MUNGE_DEFAULT_ZIP from MUNGE_ZIP_ZLIB to MUNGE_ZIP_NONE.

2004-08-24  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munge/munge.c(destroy_conf): Removed unnecessary test for ctx.
	* src/munge/unmunge.c(destroy_conf): Removed unnecessary test for ctx.

2004-08-20  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munge/munge.c(parse_cmdline):
	  Check for overflow of time-to-live "-t" cmdline option.

	* src/munge/munge.c(parse_cmdline):
	  Changed strtol() err msg from log_errno() to log_err().

2004-08-19  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munge/munge.c, src/munge/unmunge.c:
	  Reformatted code.  Changed help option string width.

	* src/munge/munge.c: Tweaked use of strtol().
	* src/munge/munge.c(str_to_int): Revamped.

2004-08-18  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/munge_defs.h:
	  Changed MUNGE_REPLAY_PURGE_TIMER from 300 to 60.

2004-08-17  Chris Dunlap  <cdunlap@llnl.gov>

	* : Re-bootstrap'd with automake-1.9.1.

	* src/munged/conf.c:
	  Added temporary cmdline opts for 'keyfile' and 'nthreads'.

	* src/munged/job.c(job_accept): Tweaked log messages.

	* src/libcommon/munge_defs.h: Changed MUNGE_THREADS from 4 to 2.
