@@ -1,5 +1,5 @@
 /*****************************************************************************
- *  $Id: gids.h,v 1.1 2004/04/16 22:15:06 dun Exp $
+ *  $Id: gids.h,v 1.2 2004/09/03 23:29:04 dun Exp $
  *****************************************************************************
  *  This file is part of the Munge Uid 'N' Gid Emporium (MUNGE).
  *  For details, see <http://www.llnl.gov/linux/munge/>.
@@ -27,6 +27,13 @@
 
 #ifndef GIDS_H
 #define GIDS_H
+
+
+/*****************************************************************************
+ *  Constants
+ *****************************************************************************/
+
+#define GIDS_HASH_SIZE          1213
 
 
 /*****************************************************************************
